[gd_scene load_steps=2 format=3 uid="uid://c00m4rc8me8mk"]

[ext_resource type="Script" uid="uid://bio0l6y6w86i4" path="res://scripts/ui/ResearchNode.gd" id="1_03efp"]

[node name="ResearchNode" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_03efp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 80.0
offset_bottom = 134.0

[node name="BtnNode" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="CostLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
horizontal_alignment = 1

[node name="LinkLine" type="Line2D" parent="."]
width = 4.0
default_color = Color(0.50534403, 0.5053441, 0.50534403, 1)

[node name="IconRect" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 80.0
offset_bottom = 80.0
mouse_filter = 2
expand_mode = 1
stretch_mode = 5
